fix user register on mobile

--- a/app/assets/stylesheets/new/shouji1.scss
+++ b/app/assets/stylesheets/new/shouji1.scss
@@ -126,6 +126,7 @@ width: 100%;
   transition-property: all;
   -webkit-transition-duration: 300ms;
           transition-duration: 300ms;
+  width: 0;
 }
 .nav--active .nav1 {
 
